--- a/examples/sycamore-guestbook/Cargo.toml
+++ b/examples/sycamore-guestbook/Cargo.toml
@@ -9,3 +9,5 @@ supabase-js-rs = { path = "../../" }
 web-sys = "0.3.60"
 wasm-bindgen = "0.2.83"
 js-sys = "0.3.60"
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.4"
